# oci-object-discovery-service

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
deployments/: docker-compose.yaml
deployments/data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6509933506170688757.wt  collection-0-2544961328964470039.wt  collection-0-8832216684329315408.wt  collection-2--6509933506170688757.wt  collection-4--6509933506170688757.wt  index-0--8744336603611959319.wt  index-1--6509933506170688757.wt  index-1-2544961328964470039.wt  index-1-8832216684329315408.wt  index-3--6509933506170688757.wt  index-5--6509933506170688757.wt  index-6--6509933506170688757.wt  sizeStorer.wt
deployments/docker/: controller-api.Dockerfile  frontend.Dockerfile  scanner-worker.Dockerfile  scheduler.Dockerfile
deployments/k8s/base/: configmap-manifest.yaml  controller-api-deploy.yaml  ingress.yaml  namespace.yaml  redis.yaml  scheduler-deploy.yaml  secrets.example.yaml  service-controller.yaml  worker-deploy.yaml
docs/: architecture.md  manifests.md  operations.md  typed-models.md
manifests/: example-catalogue.yaml
manifests/schemas/: manifest.json
oci_object_discovery_service/: __init__.py
oci_object_discovery_service/frontend/: app.py  common.py  index.html  nginx.conf  package.json  requirements.txt  vite.config.js
oci_object_discovery_service/pkg/: __init__.py
oci_object_discovery_service/utils/: logger.py
test/e2e/: README.md
test/integration/: README.md
tests/: README.md  __init__.py  create_dummy_oci_data.py
tools/ci/: README.md
(+49 files in other folders)
