[project]
name = "oci-object-discovery-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "apscheduler>=3.11.0",
    "fastapi>=0.116.1",
    "oci>=2.160.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "ruff>=0.13.0",
    "uvicorn>=0.35.0",
]
