[project]
name = "oci-object-discovery-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "apscheduler>=3.11.0",
    "bson>=0.5.10",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "nicegui>=2.24.1",
    "oci>=2.160.0",
    "pymongo>=4.15.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "ruff>=0.13.0",
    "uvicorn>=0.35.0",
]
